Polish saml-extension-federation Configuration