@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,26 +16,16 @@
 
 package example;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.security.cert.CertificateException;
-import java.security.cert.CertificateFactory;
-import java.security.cert.X509Certificate;
-import java.security.interfaces.RSAPrivateKey;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties;
-import org.springframework.boot.autoconfigure.security.saml2.Saml2RelyingPartyProperties.Registration;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.saml2.core.Saml2X509Credential;
 import org.springframework.security.saml2.provider.service.registration.InMemoryRelyingPartyRegistrationRepository;
+import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistration;
+import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistrationRepository;
 import org.springframework.security.saml2.provider.service.registration.RelyingPartyRegistrations;
 import org.springframework.security.web.SecurityFilterChain;
 
@@ -60,32 +50,13 @@ public class SecurityConfiguration {
 	}
 
 	@Bean
-	InMemoryRelyingPartyRegistrationRepository repository(Saml2RelyingPartyProperties properties,
-			@Value("classpath:credentials/rp-private.key") RSAPrivateKey key,
-			@Value("classpath:credentials/rp-certificate.crt") File cert) {
-		Saml2X509Credential signing = Saml2X509Credential.signing(key, x509Certificate(cert));
-		Registration registration = properties.getRegistration().values().iterator().next();
-		return new InMemoryRelyingPartyRegistrationRepository(RelyingPartyRegistrations
-			.collectionFromMetadataLocation(registration.getAssertingparty().getMetadataUri())
+	RelyingPartyRegistrationRepository registrations(RelyingPartyMetadata rp,
+			@Value("${saml2.ap.metadata}") String ap) {
+		List<RelyingPartyRegistration> registrations = RelyingPartyRegistrations.collectionFromMetadataLocation(ap)
 			.stream()
-			.map((builder) -> builder.registrationId(UUID.randomUUID().toString())
-				.entityId(registration.getEntityId())
-				.assertionConsumerServiceLocation(registration.getAcs().getLocation())
-				.singleLogoutServiceBinding(registration.getSinglelogout().getBinding())
-				.singleLogoutServiceLocation(registration.getSinglelogout().getUrl())
-				.singleLogoutServiceResponseLocation(registration.getSinglelogout().getResponseUrl())
-				.signingX509Credentials((credentials) -> credentials.add(signing))
-				.build())
-			.collect(Collectors.toList()));
-	}
-
-	X509Certificate x509Certificate(File location) {
-		try (InputStream source = new FileInputStream(location)) {
-			return (X509Certificate) CertificateFactory.getInstance("X.509").generateCertificate(source);
-		}
-		catch (CertificateException | IOException ex) {
-			throw new IllegalArgumentException(ex);
-		}
+			.map(rp::apply)
+			.toList();
+		return new InMemoryRelyingPartyRegistrationRepository(registrations);
 	}
 
 }
